*SVN*

* Added support for :on_error => :continue in task definitions, allowing tasks to effectively ignore connection and execution errors that occur as they run [Rob Holland]

* Use correct parameters for Logger constructor in the SCM and Strategy base initializers [Jamis Buck]

* Set LC_ALL=C before querying the revision, to make sure the output is in a predictable locale and can be parsed predictably [via Leandro Nunes dos Santos]

* Add :copy_remote_dir variable for the :copy strategy, to indicate where the archive should be copied to on the remote servers [Jamis Buck]

* Make the awk use in the dependencies code work with POSIX awk [mcornick]

* Make variable accesses thread safe [via Adrian Danieli]

* Make user input for yes/no prompts work correctly in the Mercurial module [Matthew Elder]

* Use single quotes to escape semicolon in find command, instead of a backslash [via michael.italia@gmail.com]

* Better quoting of reserved characters in commands [Jamis Buck]

* Make sure Net::SSH versions prior to 1.1.0 still work [Jamis Buck]

* Allow the :hosts and :roles keys to accept lambdas, which will be evaluated lazily to allow runtime selection of hosts and roles in tasks [Jamis Buck]

* Use `which' to test whether a command exists in the remote path, instead of `test -p' [Jamis Buck]

* Make sure the connection factory is established synchronously, to avoid multiple gateway instances being spawned [Jamis Buck]

* Make sure symlink and finalize_update tasks reference the most recent release when called by themselves [Jamis Buck]


*1.99.2 (2.0 Preview 3)* June 15, 2007
 
* CVS SCM module [Brian Phillips]

* Fix typo in Perforce SCM module [Chris Bailey]

* ssh_options < server options when connecting [Jamis Buck]

* Logger defaults to $stderr instead of STDERR [lhartley]

* Use cp -RPp instead of -a in the remote cache strategy

* Make the UploadError exception include an array of the hosts that failed [rob@inversepath.com]
